chore: make the sbt build work on JDK 17
- bump sbt 1.2.8 -> 1.9.9 (old launcher crashes on JDK 17; sbt-assembly
  2.1.1 requires sbt >= 1.7 anyway)
- fork tests with --add-opens so the old mockito can reflect on JDK 17
- ignore .gstack/ tooling dir

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>